--- a/pom.xml
+++ b/pom.xml
@@ -17,38 +17,54 @@
 		<java.version>16</java.version>
 	</properties>
 	<dependencies>
+		<!-- Project Dependencies Configures the Version from Parent-->
+
+
+		<dependency>
+		  <groupId>org.springframework.boot</groupId>
+		  <artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+<!--		<dependency>-->
+<!--		  <groupId>org.springframework.boot</groupId>-->
+<!--		  <artifactId>spring-boot-starter-jersey</artifactId>-->
+<!--		</dependency>-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
-      		<version>2.5.1</version>
 			<scope>test</scope>
 		</dependency>
-<!--    <dependency>-->
-<!--      <groupId>org.springframework.boot</groupId>-->
-<!--      <artifactId>spring-boot-starter-jersey</artifactId>-->
-<!--      <version>2.5.1</version>-->
-<!--    </dependency>-->
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-web</artifactId>
-      <version>2.5.1</version>
-    </dependency>
+		<!-- External Dependencies Takes their Version inside their Self-->
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web-services</artifactId>
-			<version>2.4.7</version>
+		  <groupId>org.hibernate</groupId>
+		  <artifactId>hibernate-core</artifactId>
+		  <version>6.0.0.Alpha8</version>
 		</dependency>
-    <dependency>
-      <groupId>org.hibernate</groupId>
-      <artifactId>hibernate-core</artifactId>
-      <version>6.0.0.Alpha8</version>
-    </dependency>
-    <dependency>
-      <groupId>mysql</groupId>
-      <artifactId>mysql-connector-java</artifactId>
-      <version>8.0.25</version>
-      <scope>runtime</scope>
-    </dependency>
+		<dependency>
+		  <groupId>mysql</groupId>
+		  <artifactId>mysql-connector-java</artifactId>
+		  <version>8.0.25</version>
+		  <scope>runtime</scope>
+		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>jakarta.ws.rs</groupId>-->
+<!--			<artifactId>jakarta.ws.rs-api</artifactId>-->
+<!--			<version>2.1.6</version>-->
+<!--		</dependency>-->
+<!--		<dependency>-->
+<!--			<groupId>junit</groupId>-->
+<!--			<artifactId>junit</artifactId>-->
+<!--			<version>4.11</version>-->
+<!--			<scope>test</scope>-->
+<!--		</dependency>-->
+<!--		<dependency>-->
+<!--			<groupId>org.springframework.boot</groupId>-->
+<!--			<artifactId>spring-boot-starter-web-services</artifactId>-->
+<!--			<version>2.4.7</version>-->
+<!--		</dependency>-->
 	</dependencies>
 
 	<build>
@@ -58,7 +74,6 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<version>2.5.1</version>
 			</plugin>
-
 		</plugins>
 	</build>
 
