--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
+#Changing the Server Port
+server.port=9090
 
+#Database Configuration:mysql
+spring.datasource.url=jdbc:mysql://localhost:3306/restapi
+spring.datasource.username=root
+spring.datasource.password=ahsan@aam
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#Hibernate Configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.format-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
