--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,12 @@
 		  <version>8.0.25</version>
 		  <scope>runtime</scope>
 		</dependency>
-<!--		<dependency>-->
+        <dependency>
+            <groupId>jakarta.ws.rs</groupId>
+            <artifactId>jakarta.ws.rs-api</artifactId>
+            <version>2.1.6</version>
+        </dependency>
+        <!--		<dependency>-->
 <!--			<groupId>jakarta.ws.rs</groupId>-->
 <!--			<artifactId>jakarta.ws.rs-api</artifactId>-->
 <!--			<version>2.1.6</version>-->
