--- a/pom.xml
+++ b/pom.xml
@@ -18,8 +18,6 @@
 	</properties>
 	<dependencies>
 		<!-- Project Dependencies Configures the Version from Parent-->
-
-
 		<dependency>
 		  <groupId>org.springframework.boot</groupId>
 		  <artifactId>spring-boot-starter-web</artifactId>
@@ -29,14 +27,10 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 <!--		<dependency>-->
-<!--		  <groupId>org.springframework.boot</groupId>-->
-<!--		  <artifactId>spring-boot-starter-jersey</artifactId>-->
+<!--			<groupId>org.springframework.boot</groupId>-->
+<!--			<artifactId>spring-boot-starter-test</artifactId>-->
+<!--			<scope>test</scope>-->
 <!--		</dependency>-->
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>
 		<!-- External Dependencies Takes their Version inside their Self-->
 		<dependency>
 		  <groupId>org.hibernate</groupId>
@@ -49,27 +43,12 @@
 		  <version>8.0.25</version>
 		  <scope>runtime</scope>
 		</dependency>
-        <dependency>
-            <groupId>jakarta.ws.rs</groupId>
-            <artifactId>jakarta.ws.rs-api</artifactId>
-            <version>2.1.6</version>
-        </dependency>
-        <!--		<dependency>-->
-<!--			<groupId>jakarta.ws.rs</groupId>-->
-<!--			<artifactId>jakarta.ws.rs-api</artifactId>-->
-<!--			<version>2.1.6</version>-->
-<!--		</dependency>-->
-<!--		<dependency>-->
-<!--			<groupId>junit</groupId>-->
-<!--			<artifactId>junit</artifactId>-->
-<!--			<version>4.11</version>-->
-<!--			<scope>test</scope>-->
-<!--		</dependency>-->
-<!--		<dependency>-->
-<!--			<groupId>org.springframework.boot</groupId>-->
-<!--			<artifactId>spring-boot-starter-web-services</artifactId>-->
-<!--			<version>2.4.7</version>-->
-<!--		</dependency>-->
+<!--		Was included by Telesko not required -->
+<!--        <dependency>-->
+<!--            <groupId>jakarta.ws.rs</groupId>-->
+<!--            <artifactId>jakarta.ws.rs-api</artifactId>-->
+<!--            <version>2.1.6</version>-->
+<!--        </dependency>-->
 	</dependencies>
 
 	<build>
