--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,15 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.format-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+#Setting the webapp/pages/ files (Prefix / Suffix)
+spring.mvc.view.prefix=/pages/
+#spring.mvc.view.suffix=.html
+
+#Setting H2 In memory Data base
+#First of all add the dependency in pom.xml
+#spring.h2.console.enabled=true
+#spring.datasource.platform=h2
+#spring.datasource.url=jdbc:h2:mem:databaseName
+
+
