Rest Example with H2 Database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,5 +22,15 @@ spring.mvc.view.prefix=/pages/
 #spring.h2.console.enabled=true
 #spring.datasource.platform=h2
 #spring.datasource.url=jdbc:h2:mem:databaseName
+# 1. User Name & Password is optional
+#spring.datasource.username=root
+#spring.datasource.password=ahsan@aam
+# 2. Hit the url in the browser
+#http://localhost:9090/h2-console
+# 3. Provide the DataBaseName as SET Here
+# 4. Provide user Name and Password as SET Here
+
+
+
 
 
